--- a/about.html
+++ b/about.html
@@ -40,12 +40,12 @@
 		<hr align="left" width="100%">
 
 		<div class="row">
-			<div class="col">
+			<div class="col-12 col-lg-6">
 				<h2>Tesla’s mission is to accelerate the world’s transition to sustainable energy.</h2>
 				<p>Tesla was founded in 2003 by a group of engineers who wanted to prove that people didn’t need to compromise to drive electric – that electric vehicles can be better, quicker and more fun to drive than gasoline cars. Today, Tesla builds not only all-electric vehicles but also infinitely scalable clean energy generation and storage products. Tesla believes the faster the world stops relying on fossil fuels and moves towards a zero-emission future, the better.</p>
 			</div>
-			<div class="col">
-				<iframe title="vimeo-player" src="https://player.vimeo.com/video/253407838" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+			<div class="col-12 col-lg-6">
+				<iframe title="vimeo-player" src="https://player.vimeo.com/video/253407838" width="100%" height="360" frameborder="0" allowfullscreen></iframe>
 			</div>
 		</div>
 		<div class="row mt-3">
@@ -60,7 +60,7 @@
 	</main>
 
 		<footer class="container-fluid text-center">
-			<a href="https://www.google.com/" style="color:black"> Made by: Ivo Vinojčić 2020 <i class="fab fa-github-square fa-lg"></i></a>
+			<a href="https://github.com/ivovinojcic/WebAplikacije"> Made by: Ivo Vinojčić 2020 <i class="fab fa-github-square fa-lg"></i></a>
 		</footer>
 
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
