--- a/contact.html
+++ b/contact.html
@@ -33,12 +33,17 @@
 			</div>
 		</nav>
 	</header>
-	<main role="main" class="container">
-		<div class="row mt-5">
-			<h1 class="mt-5 ml-3">Contact Us</h1>
+	<div class="container-fluid map-container">
+		<div class="row">
+			<div class="col-12">
+				<div class="row mb-5">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.939035894015!2d-122.15284540387259!3d37.39423465597311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb0755d7d5b47%3A0xaa5d96e0a3eec104!2sTesla%20HQ%2C%203500%20Deer%20Creek%20Rd%2C%20Palo%20Alto%2C%20CA%2094304%2C%20USA!5e1!3m2!1sen!2shr!4v1578235500179!5m2!1sen!2shr" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</div>
+			</div>
 		</div>
-		<hr align="left" width="100%">
-
+	</div>
+	<main role="main" class="container">
+<h3 class="mb-5">Contact us</h3>
 		<div class="row">
 
 			<!--Grid column-->
@@ -60,20 +65,22 @@
 							</div>
 						</div>
 					</div>
-					<div class="mb-3">
-						<label for="username">Email</label>
-						<div class="input-group">
-							<div class="input-group-prepend">
-								<span class="input-group-text">@</span>
-							</div>
-							<input type="email" class="form-control" id="email" placeholder="you@example.com">
-							<div class="invalid-feedback" style="width: 100%;">
-								Your username is required.
+					<div class="row">
+						<div class="col-12 mb-3">
+							<label for="username">Email</label>
+							<div class="input-group">
+								<div class="input-group-prepend">
+									<span class="input-group-text">@</span>
+								</div>
+								<input type="email" class="form-control" id="email" placeholder="you@example.com">
+								<div class="invalid-feedback" style="width: 100%;">
+									Your username is required.
+								</div>
 							</div>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-5 mb-4">
+						<div class="col-12 mb-4">
 							<label for="country">Country</label>
 							<select class="custom-select d-block w-100" id="country">
 								<option value="">Choose...</option>
@@ -89,26 +96,23 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-5 mb-4">
+						<div class="col-12 mb-4">
 							<div class="form-group">
 								<label for="Textarea">Message</label>
 								<textarea class="form-control" id="textArea" rows="3"></textarea>
 							</div>
 						</div>
 					</div>
+					<button type="submit" class="btn btn-primary btn-lg" onclick="validateForm()" style="width:150px;">Send</button>
 				</form>
-
-				<div class="text-center text-md-left">
-					<button class="btn btn-primary btn-lg btn-block" onclick="validateForm()">Send</button>
-				</div>
 				<div class="status"></div>
 			</div>
 			<!--Grid column-->
 			<!--Grid column-->
-			<div class="col-md-3 text-center">
+			<div class="col-md-3 text-center contact-aside">
 				<ul class="list-unstyled mb-0">
 					<li>
-						<i class="fas fa-map-marker-alt fa-2x"></i>
+						<span><i class="fas fa-map-marker-alt"></i> <b>Location</b></span>
 						<p>
 							3500 Deer Creek Road
 							Palo Alto, CA 94304
@@ -116,12 +120,12 @@
 					</li>
 
 					<li>
-						<i class="fas fa-phone mt-4 fa-2x"></i>
+						<span><i class="fas fa-phone"></i> Number</span>
 						<p>+ 01 234 567 89</p>
 					</li>
 
 					<li>
-						<i class="fas fa-envelope mt-4 fa-2x"></i>
+						<span><i class="fas fa-envelope"></i> Email</span>
 						<p>EUPress@tesla.com</p>
 					</li>
 				</ul>
@@ -129,14 +133,10 @@
 			<!--Grid column-->
 		</div>
 
-		<hr align="left" width="100%">
-		<div class="row mt-5 mb-5">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.939035894015!2d-122.15284540387259!3d37.39423465597311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb0755d7d5b47%3A0xaa5d96e0a3eec104!2sTesla%20HQ%2C%203500%20Deer%20Creek%20Rd%2C%20Palo%20Alto%2C%20CA%2094304%2C%20USA!5e1!3m2!1sen!2shr!4v1578235500179!5m2!1sen!2shr" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
-		</div>
 	</main>
 
 	<footer class="container-fluid text-center">
-		<a href="https://www.google.com/" style="color:black"> Made by: Ivo Vinojčić 2020 <i class="fab fa-github-square fa-lg"></i></a>
+		<a href="https://github.com/ivovinojcic/WebAplikacije" > Made by: Ivo Vinojčić 2020 <i class="fab fa-github-square fa-lg"></i></a>
 	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
