--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 			</div>
 		</nav>
 	</header>
-	<div id="myCarousel" class="carousel slide" data-ride="carousel">
+	<div class="d-md-none mobile-banner">
+		<img src="images/486526.jpg" alt="" width="100%">
+	</div>
+	<div id="myCarousel" class="carousel slide d-none d-md-block" data-ride="carousel">
 		<ol class="carousel-indicators">
 			<li data-target="#myCarousel" data-slide-to="0" class=""></li>
 			<li data-target="#myCarousel" data-slide-to="1" class="active"></li>
@@ -103,7 +106,7 @@
 	</main>
 
 		<footer class="container-fluid text-center">
-			<a href="https://github.com/ivovinojcic/WebAplikacije" style="color:black"> Made by: Ivo Vinojčić 2020 <i class="fab fa-github-square fa-lg"></i></a>
+			<a href="https://github.com/ivovinojcic/WebAplikacije" > Made by: Ivo Vinojčić 2020 <i class="fab fa-github-square fa-lg"></i></a>
 		</footer>
 
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
