--- a/news-3.html
+++ b/news-3.html
@@ -70,7 +70,7 @@
 	</main>
 
 		<footer class="container-fluid text-center">
-			<a href="https://www.google.com/" style="color:black"> Made by: Ivo Vinojčić 2020 <i class="fab fa-github-square fa-lg"></i></a>
+			<a href="https://github.com/ivovinojcic/WebAplikacije" > Made by: Ivo Vinojčić 2020 <i class="fab fa-github-square fa-lg"></i></a>
 		</footer>
 
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
